--- a/LIABR2022/packages.config
+++ b/LIABR2022/packages.config
@@ -3,6 +3,7 @@
   <package id="7zip" />
   <package id="7zip.install" />
   <package id="angryip" />
+  <package id="AquaSnap" />
   <package id="autohotkey" />
   <package id="autohotkey.install" />
   <package id="autohotkey.portable" />
@@ -14,6 +15,8 @@
   <package id="dotnet-desktopruntime" />
   <package id="DotNet4.0" />
   <package id="DotNet4.5.2" />
+  <package id="git" />
+  <package id="git.install" />
   <package id="github-desktop" />
   <package id="greenshot" />
   <package id="KB2919355" />
@@ -42,6 +45,7 @@
   <package id="vlc.install" />
   <package id="vscode" />
   <package id="vscode.install" />
+  <package id="wakemeonlan" />
   <package id="windirstat" />
   <package id="wireshark" />
 </packages>
