--- a/LIABR2022/packages.config
+++ b/LIABR2022/packages.config
@@ -10,11 +10,15 @@
   <package id="chocolatey" />
   <package id="chocolatey-compatibility.extension" />
   <package id="chocolatey-core.extension" />
+  <package id="chocolatey-dotnetfx.extension" />
   <package id="chocolatey-windowsupdate.extension" />
-  <package id="dotnet-6.0-desktopruntime" />
+  <package id="chocolateygui" />
+  <package id="ConEmu" />
+  <package id="dotnet-7.0-desktopruntime" />
   <package id="dotnet-desktopruntime" />
   <package id="DotNet4.0" />
   <package id="DotNet4.5.2" />
+  <package id="dotnetfx" />
   <package id="git" />
   <package id="git.install" />
   <package id="github-desktop" />
