Updated current packages

--- a/DT3800x/packages.config
+++ b/DT3800x/packages.config
@@ -4,6 +4,7 @@
   <package id="7zip.install" />
   <package id="adobereader" />
   <package id="angryip" />
+  <package id="aquasnap" />
   <package id="autohotkey" />
   <package id="autohotkey.install" />
   <package id="autohotkey.portable" />
@@ -18,10 +19,14 @@
   <package id="cports" />
   <package id="discord" />
   <package id="discord.install" />
+  <package id="dotnet-10.0-desktopruntime" />
   <package id="DotNet3.5" />
   <package id="dotnet-7.0-desktopruntime" />
+  <package id="dotnet-8.0-desktopruntime" />
+  <package id="dotnet-9.0-desktopruntime" />
   <package id="dotnet-desktopruntime" />
   <package id="dotnetfx" />
+  <package id="etcher" />
   <package id="filezilla" />
   <package id="Firefox" />
   <package id="fluent-terminal" />
@@ -38,8 +43,10 @@
   <package id="KB3063858" />
   <package id="kubernetes-cli" />
   <package id="kubernetes-helm" />
+  <package id="Listary" />
   <package id="nmap" />
   <package id="notepadplusplus" />
+  <package id="notepadplusplus.install" />
   <package id="notion" />
   <package id="openrgb" />
   <package id="pdfsam" />
@@ -59,6 +66,6 @@
   <package id="vscode" />
   <package id="vscode.install" />
   <package id="wakemeonlan" />
-  <package id="windirstat" />
+  <package id="WinDirStat" />
   <package id="wireshark" />
 </packages>
